--- a/etc/supervisor/conf.d/kibana.conf
+++ b/etc/supervisor/conf.d/kibana.conf
@@ -1,2 +1,4 @@
 [program:kibana]
-command=/opt/kibana/bin/kibana
+command=/usr/share/kibana/bin/../node/bin/node --no-warnings /usr/share/kibana/bin/../src/cli -c /etc/kibana/kibana.yml
+stdout_logfile=/var/log/kibana-stdout.log
+redirect_stderr=true
