--- a/etc/supervisor/conf.d/logstash.conf
+++ b/etc/supervisor/conf.d/logstash.conf
@@ -1,4 +1,4 @@
 [program:logstash]
-command=/opt/logstash/bin/logstash agent -f /etc/logstash/
+command=/usr/share/logstash/bin/logstash -f /etc/logstash/conf.d/logstash-simple.conf  --log.level debug --path.settings=/etc/logstash
 stdout_logfile=/var/log/logstash/stdout.log
 redirect_stderr=true
