--- a/etc/supervisor/conf.d/elasticsearch.conf
+++ b/etc/supervisor/conf.d/elasticsearch.conf
@@ -1,6 +1,4 @@
 [program:elasticsearch]
-command=/usr/share/elasticsearch/bin/elasticsearch -f -p /var/run/elasticsearch/elasticsearch.pid \
-    -Des.default.path.home=/usr/share/elasticsearch \
-    -Des.default.path.logs=/var/log/elasticsearch \
-    -Des.default.path.work=/tmp/elasticsearch \
-    -Des.default.path.conf=/etc/elasticsearch
+command=/etc/init.d/elasticsearch start
+stdout_logfile=/var/log/elasticsearch-stdout.log
+redirect_stderr=true
